# lelab-zh

./: .gitattributes  .gitignore  CLAUDE.md  NOTICE  README.md  README.zh-CN.md  RELEASING.md  pyproject.toml
.github/workflows/: build_frontend.yml  lockfile_registry_guard.yml  quality.yml  release.yml  sync_space.yml  tests.yml
app/: inferring.py  jobs.py  main.py  training.py
app/runners/: hf_cloud.py
docs/superpowers/plans/: 2026-04-30-robot-config-manager.md  2026-05-04-recording-page-redesign.md  2026-05-04-training-extra-gate.md  2026-05-05-job-checkpoints-and-inference.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/scripts/: check-i18n.mjs
frontend/src/: App.tsx
frontend/src/components/: Footer.tsx  LanguageSwitcher.tsx  SingleTabGuard.tsx  TeleopStopNotice.tsx  UpdateNotice.tsx  UrdfViewer.tsx
frontend/src/components/control/: CommandBar.tsx  MetricsPanel.tsx  TeleopCameraPanel.tsx  VisualizerPanel.tsx
frontend/src/components/jobs/: CheckpointDropdown.tsx  HubJobCard.tsx  HubModelCard.tsx  ImportModelModal.tsx  JobCard.tsx  JobsSection.tsx
frontend/src/components/landing/: DatasetPicker.tsx  HfAuthBanner.tsx  HfAuthChip.tsx  HfAuthDialog.tsx  InferenceModal.tsx  LandingTopBar.tsx  RecordingModal.tsx  RobotConfigManager.tsx  RobotSelector.tsx  RobotTile.tsx  UsageInstructionsModal.tsx
frontend/src/components/recording/: CameraConfiguration.tsx
frontend/src/components/replay/: DatasetCombobox.tsx  EpisodeList.tsx  VideoGrid.tsx
frontend/src/components/training/: ConfigurationTab.tsx  InstallProgress.tsx  PolicyExtraDialog.tsx  TrainingExtraGate.tsx  TrainingHeader.tsx  WandbInstallDialog.tsx
frontend/src/components/training/config/: AdvancedCard.tsx  EssentialsCard.tsx  TargetCard.tsx
frontend/src/components/training/monitoring/: MonitoringStats.tsx
frontend/src/components/ui/: PortDetectionButton.tsx  PortDetectionModal.tsx  dialog.tsx  select.tsx
frontend/src/contexts/: ApiContext.tsx  DragAndDropContext.tsx  HfAuthContext.tsx  ThemeContext.tsx  UrdfContext.tsx
frontend/src/hooks/: useAvailableCameras.ts  useCameraStream.ts  useDatasets.ts  useInstallExtra.ts  useRealTimeJoints.ts  useRobots.ts
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: en.json  zh-CN.json
frontend/src/lib/: apiClient.ts  checkpointsApi.ts  inferenceApi.ts  jobsApi.ts  meshLoaders.ts  recordingAudio.ts  replayApi.ts  types.ts
frontend/src/pages/: Calibration.tsx  EditDataset.tsx  Inference.tsx  Landing.tsx  NotFound.tsx  Recording.tsx  ReplayDataset.tsx  Teleoperation.tsx  Training.tsx  Upload.tsx
lelab/: calibrate.py  jobs.py  record.py  rollout.py  server.py
lelab/runners/: hf_cloud.py
lelab/scripts/: lelab.py
packaging/offline/: README-离线安装模板.txt  先看这里.txt  安装前必读.txt
packaging/offline/locks/: macos-arm64.requirements.txt  windows-cuda.requirements.txt
packaging/offline/scripts/: build_macos_arm64.sh  build_windows_cuda.ps1  install_macos.command  install_windows.bat  lelab_windows.ps1  repair_macos.command  repair_windows.bat  start_macos.command  start_windows.bat  stop_macos.command  stop_windows.bat  uninstall_macos.command  uninstall_windows.bat
tests/: mocks.py  test_datasets.py  test_jobs.py  test_rollout.py  test_scripts_lelab.py  test_server.py
